--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,26 @@
-.customClassFromFile{
-    color: green;
-}
+@import './shared/fonts';
+	
+	// PAGES
+  @import './index';
+  
+  //Components
+  @import './header';
+	
+	html, body {
+	  height:100%;
+	  width:100%;
+	  font-family: 'Montserrat', 'Helvetica';
+    }
+    .self-typed {
+        font-size: 31px;
+        font-weight: bold;
+        letter-spacing: 2px;
+        color: white;
+      }
+      .absolute {
+        position: absolute;
+      }
+      .base-page {
+        padding-top: 150px;
+        color: white;
+      }
