Add authorization, authentication, auth0

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,6 +11,9 @@
 	  width:100%;
 	  font-family: 'Montserrat', 'Helvetica';
     }
+    .clickable {
+      cursor: pointer;
+    }
     .self-typed {
         font-size: 31px;
         font-weight: bold;
